add draco gltf model to examples

--- a/examples/test/gltf-model/draco.html
+++ b/examples/test/gltf-model/draco.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>glTF Model</title>
-    <meta name="description" content="glTF Model Draco Default Path - A-Frame">
+    <title>glTF Model Draco</title>
+    <meta name="description" content="glTF Model Draco - A-Frame">
     <script src="../../../dist/aframe-master.js"></script>
   </head>
   <body>
