Add link to Community Components example

--- a/examples/index.html
+++ b/examples/index.html
@@ -137,6 +137,7 @@
       <li><a href="showcase/anime-UI/">Anime UI</a></li>
       <li><a href="showcase/comicbook/">Comic Book</a></li>
       <li><a href="showcase/composite/">Composite</a></li>
+      <li><a href="showcase/community-components/">Community Components</a></li>
       <li><a href="showcase/curved-mockups/">Curved Mockups</a></li>
       <li><a href="showcase/dynamic-lights/">Dynamic Lights</a></li>
       <li><a href="showcase/hand-tracking/">Hand Tracking</a></li>
