Consistently use jsdelivr for CDN

--- a/examples/showcase/community-components/index.html
+++ b/examples/showcase/community-components/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Entity-Component - Registry">
     <script src="../../../dist/aframe-master.js"></script>    
     <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-particle-system-component@a5a8449/dist/aframe-particle-system-component.js"></script>
-    <script src="https://unpkg.com/aframe-simple-sun-sky@^1.2.2/simple-sun-sky.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aframe-simple-sun-sky@^1.2.2/simple-sun-sky.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@d5f3f8/dist/aframe-extras.min.js"></script>
   </head>
   <body>
