--- a/examples/showcase/community-components/index.html
+++ b/examples/showcase/community-components/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Entity-Component - Registry</title>
-    <meta name="description" content="Entity-Component - Registry">
+    <title>Community Components Example</title>
+    <meta name="description" content="Community Components Example">
     <script src="../../../dist/aframe-master.js"></script>    
     <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-particle-system-component@a5a8449/dist/aframe-particle-system-component.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe-simple-sun-sky@^1.2.2/simple-sun-sky.js"></script>
