--- a/examples/showcase/basic-scene/index.html
+++ b/examples/showcase/basic-scene/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Basic Scene with Environment - A-Frame</title>
     <meta name="description" content="Basic Scene with Environment - A-Frame">
-    <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
-    <script src="https://unpkg.com/aframe-environment-component@1.1.0/dist/aframe-environment-component.min.js"></script>
+    <script src="../../../dist/aframe-master.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component@1.3.1/dist/aframe-environment-component.min.js"></script>
   </head>
   <body>
     <!-- Try changing the preset to one of default, contact, egypt, checkerboard, forest, goaland, yavapai, goldmine, 
@@ -12,6 +12,10 @@
     <!-- See more environment options: https://github.com/feiss/aframe-environment-component#parameters -->
     <a-scene environment="preset: forest">
       <a-assets>
+        <!-- Note that imgur will reject requests from 127.0.0.1 with a 403 error
+             https://stackoverflow.com/questions/43895390/imgur-images-returning-403
+            If viewing this example locally, use http://localhost rather than http://127.0.0.1
+          -->
         <img id="boxTexture" src="https://i.imgur.com/mYmmbrp.jpg">
       </a-assets>
       
