Add link to Basic Scene

--- a/examples/index.html
+++ b/examples/index.html
@@ -135,6 +135,7 @@
 
     <ul class="links">
       <li><a href="showcase/anime-UI/">Anime UI</a></li>
+      <li><a href="showcase/basic-scene/">Basic Scene</a></li>
       <li><a href="showcase/comicbook/">Comic Book</a></li>
       <li><a href="showcase/composite/">Composite</a></li>
       <li><a href="showcase/curved-mockups/">Curved Mockups</a></li>
