--- a/examples/showcase/aincraft/step4.html
+++ b/examples/showcase/aincraft/step4.html
@@ -4,7 +4,7 @@
     <title>Aincraft</title>
     <meta name="description" content="Aincraft">
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-    <script src="./components/random-color.js"></script>
+    <script src="components/random-color.js"></script>
   </head>
   <a-scene>
     <a-assets>
