--- a/examples/showcase/aincraft/step5.html
+++ b/examples/showcase/aincraft/step5.html
@@ -4,8 +4,8 @@
     <title>Aincraft</title>
     <meta name="description" content="Aincraft">
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-    <script src="./components/random-color.js"></script>
-    <script src="./components/snap.js"></script>
+    <script src="components/random-color.js"></script>
+    <script src="components/snap.js"></script>
   </head>
   <a-scene>
     <a-assets>
@@ -27,6 +27,6 @@
     <a-entity mixin="voxel" position="0 1 -2"
               animation="property: rotation; to: 0 360 0; loop: true"></a-entity>
     <a-entity mixin="voxel" position="1 0 -2"></a-entity>
-    
+
   </a-scene>
 </html>
