Add link to minecraft demo to showcase

--- a/examples/index.html
+++ b/examples/index.html
@@ -134,6 +134,7 @@
     <h2>Examples</h2>
 
     <ul class="links">
+      <li><a href="showcase/aincraft/">Aincraft</a></li>
       <li><a href="showcase/anime-UI/">Anime UI</a></li>
       <li><a href="showcase/comicbook/">Comic Book</a></li>
       <li><a href="showcase/composite/">Composite</a></li>
