Add comment explaining what to do if copy/pasting code.

--- a/examples/showcase/community-components/index.html
+++ b/examples/showcase/community-components/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>Community Components Example</title>
     <meta name="description" content="Community Components Example">
+    <!-- if running this example without a local copy of A-Frame, replace this next line with
+    <script src="https://aframe.io/releases/<release_number>/aframe.min.js"></script>
+    -->
     <script src="../../../dist/aframe-master.js"></script>    
     <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-particle-system-component@a5a8449/dist/aframe-particle-system-component.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe-simple-sun-sky@^1.2.2/simple-sun-sky.js"></script>
