Use master A-Frame

--- a/examples/showcase/aincraft/step4.html
+++ b/examples/showcase/aincraft/step4.html
@@ -3,7 +3,10 @@
     <meta charset="utf-8">
     <title>Aincraft</title>
     <meta name="description" content="Aincraft">
-    <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+    <!-- If running this example without a local copy of A-Frame, replace this next line with:
+    <script src="https://aframe.io/releases/<release_number>/aframe.min.js"></script>
+    -->
+    <script src="../../../dist/aframe-master.js"></script>
     <script src="components/random-color.js"></script>
   </head>
   <a-scene>
