Use master A-Frame; latest environment component

--- a/examples/showcase/basic-scene/index.html
+++ b/examples/showcase/basic-scene/index.html
@@ -3,8 +3,11 @@
   <head>
     <title>Basic Scene with Environment - A-Frame</title>
     <meta name="description" content="Basic Scene with Environment - A-Frame">
-    <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-    <script src="https://unpkg.com/aframe-environment-component@1.3.1/dist/aframe-environment-component.min.js"></script>
+    <!-- If running this example without a local copy of A-Frame, replace this next line with:
+    <script src="https://aframe.io/releases/<release_number>/aframe.min.js"></script>
+    -->
+    <script src="../../../dist/aframe-master.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component@1.3.2/dist/aframe-environment-component.min.js"></script>
   </head>
   <body>
     <!-- Try changing the preset to one of default, contact, egypt, checkerboard, forest, goaland, yavapai, goldmine, 
