Move from examples/showcase to examples/docs.  const -> var.

--- a/examples/index.html
+++ b/examples/index.html
@@ -134,7 +134,6 @@
     <h2>Examples</h2>
 
     <ul class="links">
-      <li><a href="showcase/aincraft/">Aincraft</a></li>
       <li><a href="showcase/anime-UI/">Anime UI</a></li>
       <li><a href="showcase/comicbook/">Comic Book</a></li>
       <li><a href="showcase/composite/">Composite</a></li>
@@ -153,6 +152,12 @@
       <li><a href="boilerplate/panorama/">360&deg; Image</a></li>
       <li><a href="boilerplate/360-video/">360&deg; Video</a></li>
       <li><a href="boilerplate/3d-model/">3D Model (glTF)</a></li>
+    </ul>
+
+    <h2>Examples from Documentation</h2>
+
+    <ul class="links">
+       <li><a href="docs/aincraft/">Aincraft</a></li>
     </ul>
 
     <h2>Tests</h2>
