--- a/examples/index.html
+++ b/examples/index.html
@@ -135,7 +135,6 @@
 
     <ul class="links">
       <li><a href="showcase/anime-UI/">Anime UI</a></li>
-      <li><a href="showcase/basic-scene/">Basic Scene</a></li>
       <li><a href="showcase/comicbook/">Comic Book</a></li>
       <li><a href="showcase/composite/">Composite</a></li>
       <li><a href="showcase/curved-mockups/">Curved Mockups</a></li>
@@ -159,6 +158,7 @@
 
     <ul class="links">
        <li><a href="docs/aincraft/">Aincraft</a></li>
+       <li><a href="docs/basic-scene/">Basic Scene</a></li>
     </ul>
 
     <h2>Tests</h2>
