--- a/examples/index.html
+++ b/examples/index.html
@@ -134,7 +134,6 @@
     <h2>Examples</h2>
 
     <ul class="links">
-      <li><a href="showcase/360-gallery/">360 Gallery</a></li>
       <li><a href="showcase/anime-UI/">Anime UI</a></li>
       <li><a href="showcase/comicbook/">Comic Book</a></li>
       <li><a href="showcase/composite/">Composite</a></li>
@@ -158,6 +157,7 @@
     <h2>Examples from Documentation</h2>
 
     <ul class="links">
+       <li><a href="docs/360-gallery/">360 Gallery</a></li>
        <li><a href="docs/aincraft/">Aincraft</a></li>
     </ul>
 
