--- a/examples/index.html
+++ b/examples/index.html
@@ -138,7 +138,7 @@
     <ul class="links">
       <li><a href="showcase/anime-UI/">Anime UI</a></li>
       <li><a href="showcase/comicbook/">Comic Book</a></li>
-      <li><a href="showcase/composite/">Composite</a></li>
+      <li><a href="showcase/composite/">Composite</a></li>      
       <li><a href="showcase/curved-mockups/">Curved Mockups</a></li>
       <li><a href="showcase/dynamic-lights/">Dynamic Lights</a></li>
       <li><a href="showcase/hand-tracking/">Hand Tracking</a></li>
@@ -154,6 +154,14 @@
       <li><a href="boilerplate/panorama/">360&deg; Image</a></li>
       <li><a href="boilerplate/360-video/">360&deg; Video</a></li>
       <li><a href="boilerplate/3d-model/">3D Model (glTF)</a></li>
+    </ul>
+
+    <h2>Examples from Documentation</h2>
+
+    <ul class="links">
+       <li><a href="docs/360-gallery/">360 Gallery</a></li>
+       <li><a href="docs/aincraft/">Aincraft</a></li>
+       <li><a href="docs/community-components/">Community Components</a></li>
     </ul>
 
     <h2>Tests</h2>
