--- a/examples/index.html
+++ b/examples/index.html
@@ -138,13 +138,15 @@
     <ul class="links">
       <li><a href="showcase/anime-UI/">Anime UI</a></li>
       <li><a href="showcase/comicbook/">Comic Book</a></li>
-      <li><a href="showcase/composite/">Composite</a></li>      
+      <li><a href="showcase/composite/">Composite</a></li>
       <li><a href="showcase/curved-mockups/">Curved Mockups</a></li>
       <li><a href="showcase/dynamic-lights/">Dynamic Lights</a></li>
       <li><a href="showcase/hand-tracking/">Hand Tracking</a></li>
+      <li><a href="showcase/hand-tracking-grab-controls/">Hand Tracking Grab Controls</a></li>
       <li><a href="showcase/ui/">User Interface</a></li>
       <li><a href="showcase/link-traversal/">Link Traversal</a></li>
       <li><a href="showcase/model-viewer/">Model Viewer</a></li>
+      <li><a href="showcase/spatial-ui/">Spatial UI</a></li>
       <li><a href="showcase/tracked-controls/">Tracked Controls</a></li>
       <li><a href="showcase/shopping/">Shopping</a></li>
       <li><a href="showcase/spheres-and-fog/">Spheres and Fog</a></li>
@@ -154,6 +156,8 @@
       <li><a href="boilerplate/panorama/">360&deg; Image</a></li>
       <li><a href="boilerplate/360-video/">360&deg; Video</a></li>
       <li><a href="boilerplate/3d-model/">3D Model (glTF)</a></li>
+      <li><a href="mixed-reality/anchor/">Anchor (Mixed Reality)</a></li>
+      <li><a href="mixed-reality/real-world-meshing/">Real World Meshing (Mixed Reality)</a></li>
     </ul>
 
     <h2>Examples from Documentation</h2>
@@ -229,6 +233,7 @@
       <li><a href="performance/cubes/">Cubes</a></li>
       <li><a href="performance/entity-count/">Entity Count</a></li>
       <li><a href="performance/in-vr/">In VR</a></li>
+      <li><a href="performance/multiview-extension/?multiview=on">Multiview Extension</a></li>
     </ul>
   </body>
 </html>
