--- a/examples/showcase/model-viewer/index.html
+++ b/examples/showcase/model-viewer/index.html
@@ -18,12 +18,13 @@
 <a-scene
   renderer="colorManagement: true;"
   info-message="htmlSrc: #messageText"
-  model-viewer="gltfModel: #triceratops; title: Triceratops">
+  model-viewer="gltfModel: #triceratops; title: Triceratops"
+  vr-mode-ui="enterAREnabled: true">
   <a-assets timeout="10000">
     <!--
       Model source: https://sketchfab.com/3d-models/triceratops-d16aabe33dc24f8ab37e3df50c068265
       Model author: https://sketchfab.com/VapTor
-      Model license: Sketcfab Standard
+      Model license: Sketchfab Standard
     -->
     <a-asset-item id="triceratops"
       src="https://cdn.aframe.io/examples/ar/models/triceratops/scene.gltf"
