--- a/examples/showcase/hand-tracking-grab-controls/index.html
+++ b/examples/showcase/hand-tracking-grab-controls/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title>Hand Tracking Grab Controls • A-Frame</title>
     <meta name="description" content="Hand Tracking Grab Controls • A-Frame">
-    <script src="../../dist/aframe-master.min.js"></script>
+    <script src="../../../dist/aframe-master.min.js"></script>
     <script src="../../js/spatial-ui/spatial-utils.js"></script>
     <script src="../../js/spatial-ui/spatial-modal.js"></script>
     <script src="../../js/spatial-ui/spatial-hero-image.js"></script>
@@ -20,21 +20,17 @@
       obb-collider="showColliders: false"
       info-message="htmlSrc: #messageText">
       <a-assets>
-        <a-asset-item id="pickle"
-          src="scene.gltf"
-          response-type="arraybuffer" crossorigin="anonymous"></a-asset-item>
         <a-asset-item id="messageText" src="message.html"></a-asset-item>
         <img id="ubuntu" src="./images/ubuntu-desktop.png" />
       </a-assets>
       <a-entity camera position="0 1.5 0" look-controls wasd-controls></a-entity>
-      <a-entity position="0 1.5 -0.5" gltf-model="#pickle" grabbable scale="0.04 0.04 0.04"></a-entity>
-      <!-- <a-entity position="0 1.7 -1" grabbable hover>
+      <a-entity position="0 1.6 -1" grabbable hover>
         <a-entity spatial-modal="width: 1.81; height: 1.035; roundCorners: false">
           <a-entity spatial-hero-image="src: #ubuntu; width: 1.775; height: 1; roundCorners: false" position="0 0 0.001"></a-entity>
         </a-entity>
-      </a-entity>  -->
-      <a-entity id="rightHand" laser-controls="hand: right" hand-tracking-grab-controls="hand: right"></a-entity>
-      <a-entity id="leftHand" laser-controls="hand: left" hand-tracking-grab-controls="hand: left"></a-entity>
+      </a-entity>
+      <a-entity id="rightHand" hand-tracking-grab-controls="hand: right"></a-entity>
+      <a-entity id="leftHand" hand-tracking-grab-controls="hand: left"></a-entity>
     </a-scene>
   </body>
 </html>
