Update usages of vr-mode-ui to the new xr-mode-ui

--- a/examples/showcase/anime-UI/index.html
+++ b/examples/showcase/anime-UI/index.html
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/aframe-event-set-component@4.2.1/dist/aframe-event-set-component.min.js"></script>
   </head>
   <body>
-    <a-scene renderer="colorManagement: true;" vr-mode-ui="enterAREnabled: true">
+    <a-scene renderer="colorManagement: true;" xr-mode-ui="XRMode: xr">
       <a-assets>
         <a-asset-item id="engine" src="models/engine.glb"></a-asset-item>
         <a-mixin id="image" geometry="height: 2; width: 2"></a-mixin>
