--- a/examples/showcase/spatial-ui/index.html
+++ b/examples/showcase/spatial-ui/index.html
@@ -38,7 +38,7 @@
         <a-entity spatial-modal="width: 1.2; height: 0.72" visible="false">
           <a-entity spatial-modal-image="width: 0.6; height: 0.72" position="-0.3 0 0.001"></a-entity>
           <a-entity spatial-close-button="" position="0.55 0.31 0.001" class="close-button"></a-entity>
-          <a-text font="kelsonsans" class="movie-title" value="Hayao Miyazaki" align="left" width="0.75"position="0.03 0.2 0.001"></a-text>
+          <a-text font="kelsonsans" class="movie-title" value="Hayao Miyazaki" align="left" width="0.75" position="0.03 0.2 0.001"></a-text>
           <a-text font="kelsonsans" height="1" class="movie-synopsis" value="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." align="left" width="0.5" position="0.03 0.08 0.001"></a-text>
         </a-entity>
 
@@ -55,7 +55,7 @@
               title="The Secret World of Arrietty (2010)"
               synopsis="Arrietty, a tiny teenager, lives with her parents in the recesses of a suburban home, unbeknown to the homeowner and housekeeper. Like others of her kind, Arrietty remains hidden from her human hosts."
               tile="src: https://cdn.aframe.io/examples/ui/karigurashi.jpg"
-              position="-0.6435 0.318 0.01" opacity="0.5"></a-entity>
+              position="-0.6435 0.318 0.01"></a-entity>
             <a-entity
               mixin="tile"
               title="Ponyo (2008)"
