Omit crossorigin attribute on a-asset-item tags as it has no effect

--- a/examples/mixed-reality/anchor/index.html
+++ b/examples/mixed-reality/anchor/index.html
@@ -22,7 +22,7 @@
         <!-- Model by theGentleGiant https://sketchfab.com/3d-models/vintage-painting-dani-3fdd92904c2b44028bef28b33e897d9f -->
         <a-asset-item id="frame"
           src="https://cdn.aframe.io/examples/mixed-reality/anchor/models/painting/scene.gltf"
-          response-type="arraybuffer" crossorigin="anonymous"></a-asset-item>
+          response-type="arraybuffer"></a-asset-item>
         <a-asset-item id="messageText" src="message.html"></a-asset-item>
         <img id="helloaframe" src="https://cdn.aframe.io/examples/mixed-reality/anchor/images/helloaframe.png" crossorigin="anonymous"/>
         <img id="greco" src="https://cdn.aframe.io/examples/mixed-reality/anchor/images/greco.png" crossorigin="anonymous"/>
