Fix small mistakes in mixed-reality examples

--- a/examples/mixed-reality/real-world-meshing/index.html
+++ b/examples/mixed-reality/real-world-meshing/index.html
@@ -12,7 +12,7 @@
     </head>
   <body>
     <a-scene
-      real-world-meshing="filter: table; meshesEnabled: false; planeMixin: xrplane"
+      real-world-meshing="filterLabels: table; meshesEnabled: false; planeMixin: xrplane"
       obb-collider="showColliders: false"
       renderer="colorManagement: true;"
       xr-mode-ui="XRMode: ar"
