--- a/examples/mixed-reality/watch/index.html
+++ b/examples/mixed-reality/watch/index.html
@@ -78,7 +78,7 @@
         hide-on-enter-ar
         rotation="90 0 0"
         position="0 0 0"
-        geometry="primitive: plane; width: 100; height: 100; segmentsHeight: 2, segmentsWidth: 2;"
+        geometry="primitive: plane; width: 100; height: 100; segmentsHeight: 2; segmentsWidth: 2;"
         material="shader: grid; transparent: true; side: double;">
       </a-entity>
       <!-- Only renders in 2D. An empty scene when the page loads not very interesting -->
