--- a/examples/boilerplate/webxr-ar-lighting/index.html
+++ b/examples/boilerplate/webxr-ar-lighting/index.html
@@ -1,10 +1,9 @@
 <html>
 
 <head>
-	<script src="../../../build/aframe.js"></script>
-	<!-- <script src="../../../dist/aframe-master.js"></script> -->
+	<script src="../../../dist/aframe-master.js"></script>
 	<script src="ar-shadow-helper.js"></script>
-	<script src="https://unpkg.com/aframe-environment-component@1.3.1/dist/aframe-environment-component.min.js"></script>
+	<script src="https://unpkg.com/aframe-environment-component@1.3.4/dist/aframe-environment-component.min.js"></script>
 	<title>AFRame Total WebXR AR Demo</title>
 	<style>
 		body {
@@ -20,7 +19,7 @@
 		reflection="directionalLight:#dirlight;"
 		ar-hit-test="target:#table;"
 		shadow="type: pcfsoft"
-		vr-mode-ui="enterAREnabled: true">
+		xr-mode-ui="XRMode: xr">
 		<a-assets>
 			<!-- model by Snooze https://sketchfab.com/3d-models/low-poly-table-b940256ec5994e26a9e71289d1211b19 -->
 			<a-asset-item id="table-glb" src="../../assets/models/table.glb"></a-asset-item>
