--- a/examples/mixed-reality/watch/index.html
+++ b/examples/mixed-reality/watch/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Hand Menu (Mixed Reality) • A-Frame">
     <script src="../../../dist/aframe-master.js"></script>
     <script src="../../js/info-message.js"></script>
-    <script src="https://unpkg.com/aframe-environment-component@1.3.0/dist/aframe-environment-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component@1.3.4/dist/aframe-environment-component.min.js"></script>
     <script src="time.js"></script>
     <script src="button.js"></script>
     <script src="hand-menu.js"></script>
@@ -25,7 +25,7 @@
         <!-- Model by Socksthecat https://sketchfab.com/3d-models/character-accessory-watch-d2a883db37184592b5ea0ce4cbd2a286 -->
         <a-asset-item id="watch"
           src="https://cdn.aframe.io/examples/mixed-reality/watch/models/watch.glb"
-          response-type="arraybuffer" crossorigin="anonymous"></a-asset-item>
+          response-type="arraybuffer"></a-asset-item>
         <a-asset-item id="messageText" src="message.html"></a-asset-item>
         <img crossorigin="anonymous" id="infoButton" src="https://cdn.aframe.io/examples/mixed-reality/watch/images/info-button.png" />
         <img crossorigin="anonymous" id="infoButtonHover" src="https://cdn.aframe.io/examples/mixed-reality/watch/images/info-button-hover.png" />
@@ -78,7 +78,7 @@
         hide-on-enter-ar
         rotation="90 0 0"
         position="0 0 0"
-        geometry="primitive: plane; width: 100; height: 100; segmentsHeight: 2, segmentsWidth: 2;"
+        geometry="primitive: plane; width: 100; height: 100; segmentsHeight: 2; segmentsWidth: 2;"
         material="shader: grid; transparent: true; side: double;">
       </a-entity>
       <!-- Only renders in 2D. An empty scene when the page loads not very interesting -->
