--- a/examples/animation/aframe-logo/index.html
+++ b/examples/animation/aframe-logo/index.html
@@ -10,7 +10,7 @@
     <script src="https://unpkg.com/aframe-event-set-component@4.2.1/dist/aframe-event-set-component.min.js"></script>
   </head>
   <body>
-    <a-scene vr-mode-ui="enabled: false;"
+    <a-scene xr-mode-ui="enabled: false;"
              background="color: #24CAFF;"
              renderer="colorManagement: true;">
       <a-assets>
