--- a/examples/showcase/hand-tracking/index.html
+++ b/examples/showcase/hand-tracking/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Hand Tracking! • A-Frame">
     <script src="../../../dist/aframe-master.min.js"></script>
     <script src="../../js/info-message.js"></script>
-    <script src="https://unpkg.com/aframe-environment-component@1.3.0/dist/aframe-environment-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component@1.3.4/dist/aframe-environment-component.min.js"></script>
     <script src="pinchable.js"></script>
     <script src="color-change.js"></script>
     <script src="slider.js"></script>
@@ -57,7 +57,7 @@
         <a-entity id="sphereButton" button="label: sphere" position="-0.15 0 0"></a-entity>
         <a-entity id="boxButton" button="label: box" position="0 0 0"></a-entity>
         <a-entity id="torusButton" button="label: torus" position="0.15 0 0"></a-entity>
-        <a-entity id="darkModeButton" button="label: Dark Mode; width: 0.20; toggable: true" position="0 -0.10 0"></a-entity>
+        <a-entity id="darkModeButton" button="label: Dark Mode; width: 0.20; toggleable: true" position="0 -0.10 0"></a-entity>
       </a-entity>
       <a-entity hand-tracking-controls="hand: left"></a-entity>
       <a-entity hand-tracking-controls="hand: right"></a-entity>
