--- a/examples/test/text/scenarios.html
+++ b/examples/test/text/scenarios.html
@@ -71,7 +71,7 @@
       </a-box>
 
       <!-- Label a plane, three times. -->
-      <a-plane rotation="-90 0 0" width="1" depth="1" position="0 1 -1"
+      <a-plane rotation="-90 0 0" width="1" height="1" position="0 1 -1"
                text="baseline: bottom; font: kelsonsans; color: black; value:
                      kelsonsans font
                      align default (left)
