--- a/examples/mixed-reality/anchor/index.html
+++ b/examples/mixed-reality/anchor/index.html
@@ -8,7 +8,6 @@
     <meta name="description" content="Anchor (Mixed Reality) • A-Frame">
     <script src="../../../dist/aframe-master.min.js"></script>
     <script src="../../js/info-message.js"></script>
-    <script src="https://unpkg.com/aframe-environment-component@1.3.0/dist/aframe-environment-component.min.js"></script>
     <script src="anchor-grabbed-entity.js"></script>
     <script src="painting-changer.js"></script>
     <script src="painting.js"></script>
@@ -24,7 +23,7 @@
         <!-- Model by theGentleGiant https://sketchfab.com/3d-models/vintage-painting-dani-3fdd92904c2b44028bef28b33e897d9f -->
         <a-asset-item id="frame"
           src="https://cdn.aframe.io/examples/mixed-reality/anchor/models/painting/scene.gltf"
-          response-type="arraybuffer" crossorigin="anonymous"></a-asset-item>
+          response-type="arraybuffer"></a-asset-item>
         <a-asset-item id="messageText" src="message.html"></a-asset-item>
         <img id="helloaframe" src="https://cdn.aframe.io/examples/mixed-reality/anchor/images/helloaframe.png" crossorigin="anonymous"/>
         <img id="greco" src="https://cdn.aframe.io/examples/mixed-reality/anchor/images/greco.png" crossorigin="anonymous"/>
