--- a/examples/test/text/anchors.html
+++ b/examples/test/text/anchors.html
@@ -7,7 +7,7 @@
     <script src="../../../dist/aframe-master.min.js"></script>
   </head>
   <body>
-    <a-scene background="color: #222" auto-enter-vr="display:all">
+    <a-scene background="color: #222">
       <a-assets>
         <a-mixin
           id="marker"
