--- a/examples/test/embedded-cursor/index.html
+++ b/examples/test/embedded-cursor/index.html
@@ -5,7 +5,7 @@
     <title>Embedded Cursor</title>
     <meta name="description" content="Embedded Cursor - A-Frame">
     <script src="../../../dist/aframe-master.js"></script>
-    <script src="https://unpkg.com/aframe-event-set-component@4.1.2/dist/aframe-event-set-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-event-set-component@5.x.x/dist/aframe-event-set-component.min.js"></script>
     <style type="text/css">
       a-scene{
         width: 50vw;
