--- a/examples/animation/aframe-logo/index.html
+++ b/examples/animation/aframe-logo/index.html
@@ -5,7 +5,7 @@
     <title>A-Frame Logo</title>
     <meta name="description" content="A-Frame Logo - A-Frame">
     <script src="../../../dist/aframe-master.js"></script>
-    <script src="https://unpkg.com/aframe-event-set-component@4.2.1/dist/aframe-event-set-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-event-set-component@5.x.x/dist/aframe-event-set-component.min.js"></script>
   </head>
   <body>
     <a-scene xr-mode-ui="enabled: false;"
