tracked-controls: only shows permissions warning once

--- a/examples/test/iframe/index.html
+++ b/examples/test/iframe/index.html
@@ -41,7 +41,7 @@
     </style>
   </head>
   <body>
-    <iframe id="aframe" src="/examples/animation/aframe-logo/?ui=false"></iframe>
+    <iframe id="aframe" src="../../../examples/animation/aframe-logo/?ui=false" allow="gamepad 'none'"></iframe>
     <button class="enter-vr">ENTER VR</button>
   </body>
   <script>
