--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=examples/">
   </head>
-  <body></body>
+  <body>
+  </body>
 </html>
