--- a/examples/showcase/comicbook/index.html
+++ b/examples/showcase/comicbook/index.html
@@ -30,8 +30,8 @@
       </a-assets>
       <a-entity
         layer="src: #page1; height: 3; width: 1.9505"></a-entity>
-      <a-entity oculus-touch-controls="hand: left" page-controls></a-entity>
-      <a-entity oculus-touch-controls="hand: right" page-controls></a-entity>
+      <a-entity meta-touch-controls="hand: left" page-controls></a-entity>
+      <a-entity meta-touch-controls="hand: right" page-controls></a-entity>
     </a-scene>
   </body>
 </html>
