Remove physically correct lights from renderer

--- a/examples/boilerplate/ar-hello-world/index.html
+++ b/examples/boilerplate/ar-hello-world/index.html
@@ -20,10 +20,10 @@
   </head>
   <body>
     <a-scene
-      reflection="directionalLight:a-light[type=directional]"
-      ar-hit-test="target:#objects;"
-      renderer="physicallyCorrectLights:true;colorManagement:true;exposure:1;toneMapping:ACESFilmic;"
-      shadow="type:pcfsoft"
+      reflection="directionalLight: a-light[type=directional]"
+      ar-hit-test="target: #objects;"
+      renderer="colorManagement:t rue; exposure: 1; toneMapping: ACESFilmic"
+      shadow="type: pcfsoft"
       xr-mode-ui="XRMode: xr"
     >
       <a-light type="directional" light="castShadow:true;" position="1 1 1" intensity="1.57" shadow-camera-automatic="#objects"></a-light>
