Split example into 2
1st example shows environment component (initial part of tutorial)
2nd example shows custom environment (optional part of tutorial)

--- a/examples/index.html
+++ b/examples/index.html
@@ -165,6 +165,7 @@
        <li><a href="docs/360-gallery/">360 Gallery</a></li>
        <li><a href="docs/aincraft/">Aincraft</a></li>
        <li><a href="docs/basic-scene/">Basic Scene</a></li>
+       <li><a href="docs/basic-scene-2/">Basic Scene with Custom Environment</a></li>
        <li><a href="docs/community-components/">Community Components</a></li>
     </ul>
 
