--- a/examples/index.html
+++ b/examples/index.html
@@ -164,6 +164,8 @@
     <ul class="links">
        <li><a href="docs/360-gallery/">360 Gallery</a></li>
        <li><a href="docs/aincraft/">Aincraft</a></li>
+       <li><a href="docs/basic-scene/">Basic Scene</a></li>
+       <li><a href="docs/basic-scene-2/">Basic Scene with Custom Environment</a></li>
        <li><a href="docs/community-components/">Community Components</a></li>
     </ul>
 
