Fix render order of background fade in User Interface example

--- a/examples/showcase/ui/index.html
+++ b/examples/showcase/ui/index.html
@@ -73,7 +73,7 @@
         <a-entity
           id="fadeBackground"
           geometry="primitive: sphere; radius: 2.5"
-          material="color: black; side: back; shader: flat; transparent: true; opacity: 0.6" visible="false">
+          material="color: #999999; side: back; shader: flat; blending: subtractive;" visible="false">
         </a-entity>
       </a-entity>
 
