Update video URL of 360 video examples (fix #5603)

--- a/examples/boilerplate/360-video/index.html
+++ b/examples/boilerplate/360-video/index.html
@@ -20,7 +20,7 @@
                loop
                crossorigin="anonymous"
                playsinline webkit-playsinline
-               src="https://bitmovin-a.akamaihd.net/content/playhouse-vr/progressive.mp4">
+               src="https://cdn.bitmovin.com/content/assets/playhouse-vr/progressive.mp4">
         </video>
       </a-assets>
       <a-videosphere
