Update docs-primitive generation script to output formatted Markdown tables

--- a/scripts/docs-primitives/index.html
+++ b/scripts/docs-primitives/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<script src="http://localhost:9000/build/aframe.js"></script>
+<script src="http://localhost:8080/dist/aframe-master.js"></script>
 </head>
 <body>
 <script>
@@ -18,19 +18,11 @@ geometryNames.forEach(function (geometryName) {
 
   var str = [];
   str.push('## Attributes\n');
-  str.push('| Attribute | Component Mapping | Default Value |');
-  str.push('| -------- | ----------------- | ------------- |');
-
-  // Compile geometry mappings.
-  var geometry = geometries[geometryName];
+  
+  // Header
   var rows = {};
-  Object.keys(geometry.schema).forEach(function addMapping (property) {
-    rows[unCamelCase(property)] = '|' + [
-      unCamelCase(property),
-      'geometry.' + property,
-      geometry.schema[property].stringify(geometry.schema[property].default)
-    ].join('|') + '|';
-  });
+  rows[0] = ['Attribute', 'Component Mapping', 'Default Value'];
+  rows[1] = ['--------', '-----------------', '-------------'];
 
   // Compile mesh mixin mappings.
   Object.keys(meshMappings).forEach(function addMapping (attribute) {
@@ -38,18 +30,36 @@ geometryNames.forEach(function (geometryName) {
     var property = mapping.split('.')[1];
     var materialProp = AFRAME.components.material.schema[property] ||
                        AFRAME.shaders.standard.schema[property];
-    rows[attribute] = '|' + [
+    rows[attribute] = [
       attribute,
       mapping,
       (materialProp.default === undefined || materialProp.default === null ||
        materialProp.default === '') ?
         'None' : materialProp.stringify(materialProp.default)
-    ].join('|') + '|';
+    ];
+  });
+
+  // Compile geometry mappings.
+  var geometry = geometries[geometryName];
+  Object.keys(geometry.schema).forEach(function addMapping (property) {
+    rows[unCamelCase(property)] = [
+      unCamelCase(property),
+      'geometry.' + property,
+      geometry.schema[property].stringify(geometry.schema[property].default)
+    ];
+  });
+  
+  // Measure required length for each column
+  var cols = [0, 0, 0];
+  Object.values(rows).forEach(function (row) {
+    for(var i = 0; i < cols.length; i++) {
+      cols[i] = Math.max(cols[i], row[i].length);
+    }
   });
 
   // Append rows.
   Object.keys(rows).sort().forEach(function (attribute) {
-    str.push(rows[attribute]);
+    str.push('| ' + rows[attribute].map((v, i) => v.padEnd(cols[i], ' ')).join(' | ') + ' |');
   });
 
   console.log(str.join('\n'));
