--- a/examples/boilerplate/teapot/index.html
+++ b/examples/boilerplate/teapot/index.html
@@ -8,8 +8,8 @@
       {
         "imports": {
           "aframe": "../../../dist/aframe-master.module.min.js",
-          "three": "https://cdn.jsdelivr.net/npm/super-three@0.172.0/build/three.module.js",
-          "three/addons/": "https://cdn.jsdelivr.net/npm/super-three@0.172.0/examples/jsm/",
+          "three": "../../../super-three-package/build/three.module.js",
+          "three/addons/": "../../../super-three-package/examples/jsm/",
           "aframe-extras/controls": "https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.x/dist/aframe-extras.controls.min.js"
         }
       }
