--- a/examples/boilerplate/importmap/index.html
+++ b/examples/boilerplate/importmap/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Teapot • A-Frame</title>
-    <meta name="description" content="Teapot • A-Frame" />
+    <title>Importmap • A-Frame</title>
+    <meta name="description" content="Importmap • A-Frame" />
     <script type="importmap">
       {
         "imports": {
