--- a/examples/index.html
+++ b/examples/index.html
@@ -157,6 +157,7 @@
       <li><a href="boilerplate/3d-model/">3D Model (glTF)</a></li>
       <li><a href="mixed-reality/anchor/">Anchor (Mixed Reality)</a></li>
       <li><a href="mixed-reality/real-world-meshing/">Real World Meshing (Mixed Reality)</a></li>
+      <li><a href="boilerplate/importmap/">Importmap (import teapot geometry from three/addons)</a></li>
     </ul>
 
     <h2>Examples from Documentation</h2>
