Add 3D gaussian splats support

--- a/examples/index.html
+++ b/examples/index.html
@@ -139,6 +139,7 @@
       <li><a href="showcase/composite/">Composite</a></li>
       <li><a href="showcase/curved-mockups/">Curved Mockups</a></li>
       <li><a href="showcase/dynamic-lights/">Dynamic Lights</a></li>
+      <li><a href="showcase/gaussian-splats/">Gaussian Splats</a></li>
       <li><a href="showcase/hand-tracking/">Hand Tracking</a></li>
       <li><a href="showcase/hand-tracking-grab-controls/">Hand Tracking Grab Controls</a></li>
       <li><a href="showcase/ui/">User Interface</a></li>
