Update index.html changing path

--- a/examples/post-process/index.html
+++ b/examples/post-process/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>    
-     <script src="../../../dist/aframe-master.js"></script>
+     <script src="../../dist/aframe-master.js"></script>
     <script type="module" src="./bloom.js"></script>;
 
     <meta charset="utf-8">
