--- a/examples/post-process/index.html
+++ b/examples/post-process/index.html
@@ -22,7 +22,7 @@
 
     <a-scene         
         reflection="directionalLight:#sun;"
-        ßshadow="type: pcfsoft; autoUpdate: true" 
+        shadow="type: pcfsoft; autoUpdate: true" 
         background="color:black;"        
         renderer="anisotropy:4; stencil:true; alpha:false; colorManagement:true; exposure:1.0;">
         
