Update index.html to get rid of useless tags

--- a/examples/showcase/post-processing/index.html
+++ b/examples/showcase/post-processing/index.html
@@ -27,7 +27,7 @@
           renderer="anisotropy:4; stencil:true; alpha:false; colorManagement:true; exposure:1.0;"
           bloom="threshold: 1.0; strength: 0.6; radius: 1; exposure: 1.0">
         
-        <a-entity id="pov-camera" position="0 1.6 2" rotation="3.323 -8.136 0" camera="" look-controls="" wasd-controls="" data-aframe-inspector-original-camera=""></a-entity>
+        <a-entity id="pov-camera" position="0 1.6 2" rotation="3.323 -8.136 0" camera look-controls wasd-controls></a-entity>
         
         <a-box id="boxemissivewhite" shadow="cast:false; receive:false" position="1 1.720 -1" rotation="0 0 0"
             scale="0.2 0.2 0.2" color="#FFFFFF" material="emissive: #FFF; emissiveIntensity:4;"></a-box>
