Update index.html to get rid of semicolon and trailing comma

--- a/examples/showcase/post-processing/index.html
+++ b/examples/showcase/post-processing/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>    
@@ -6,15 +7,15 @@
           "imports": {
             "aframe": "../../dist/aframe-master.module.min.js",
             "three": "../../../super-three-package/build/three.module.js",
-            "three/addons/": "../../../super-three-package/examples/jsm/",
+            "three/addons/": "../../../super-three-package/examples/jsm/"
           }
         }
      </script>
-     <script type="module" src="./bloom.js"></script>;
+     <script type="module" src="./bloom.js"></script>
 
      <meta charset="utf-8">
-     <title>Post Processing Bloom A-Frame Demo</title>
-     <meta name="description" content="Post Processing Bloom Demo">
+     <title>Post Processing Bloom Effect</title>
+    <meta name="description" content="Post Processing Bloom Effect • A-Frame">
 
 </head>
 
